styles.css
/* ... */
#playerpage.idle:not(.fullscreen-art) #art-holder {
	transform: translateY(-42px);
	transition: transform 0.5s ease;
}

#playerpage.idle #below-art-holder {
	transition: transform 0.5s ease;
}

#playerpage.idle.fullscreen-art #below-art-holder {
	transform: translateY(calc(100% - 150px));
}

#playerpage.idle.fullscreen-art.idle-compact #below-art-holder {
	transform: translateY(calc(100% - 110px));
}

#playerpage.idle:not(.fullscreen-art) #below-art-holder {
	z-index: 2;
	
	transform: translateY(calc(100% - 150px));
}

#playerpage.idle:not(.fullscreen-art) #artwork {
	max-width: calc(100vw - 48px);
}

#playerpage.idle:not(.fullscreen-art).idle-compact #below-art-holder {
	transform: translateY(calc(100% - 110px));
}

#playerpage.idle.idle-compact #seekbar-holder {
	opacity: 0;
}

#playerpage #topbar,
#playerpage #controls-holder,
#playerpage #bottombar,
#playerpage #like-button {
	transition: opacity 0.3s ease;
}

#playerpage #below-art-holder {
	transition: transform 0.3s ease;
}

